# conjured

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: .attestation.json  index.md
docs/agent/steering/: exhaustive-declaration-override.md  runtime-lookup-is-a-service.md  service-invoke-call-convention.md  state-across-runs.md  test-substitution-both-declarations.md  write-and-observe-bundle.md
docs/architecture/: components.md  context.md  enforcement-modes.md  exhaustive-declaration.md  handler-kinds.md  handler-resolution.md  hash-model.md  trust-model.md
docs/components/deployment/: conformance.md  reference.md
docs/components/error-channel/: conformance.md  reference.md
docs/components/handler/: conformance.md  reference.md
docs/components/handler/kind-schemas/: README.md  bundle.schema.toml  hook.schema.toml  pipeline.schema.toml  service.schema.toml  trainable.schema.toml  transform.schema.toml
docs/components/native-library/: conformance.md  reference.md
docs/components/pipeline/: conformance.md  reference.md
docs/components/server/: conformance.md  reference.md
docs/components/service-type/: conformance.md  reference.md
docs/components/testing/: api.md  reference.md
docs/explanation/: enforcement-modes.md  error-channel.md  exhaustive-declaration.md  handler-kinds.md  handler-reference-explanation.md  hash-model.md  overview.md  pipeline-as-training-contract.md  pipeline-reference-explanation.md  trust-model.md
docs/how-to/: compose-and-run.md
docs/reference/: error-index.md  glossary.md  principles.md
src/conjured/: __init__.py  canonical.py  cli.py  derivables.py  errors.py  manifest.py
src/conjured/adapters/: __init__.py  gbnf.py  secret_refs.py  wire.py
src/conjured/agent/: __init__.py  error-classes.toml  llms.txt
src/conjured/agent/docs/architecture/: components.md  context.md  enforcement-modes.md  exhaustive-declaration.md  handler-kinds.md  handler-resolution.md  hash-model.md  trust-model.md
src/conjured/agent/docs/components/deployment/: conformance.md  reference.md
src/conjured/agent/docs/components/error-channel/: conformance.md  reference.md
src/conjured/agent/docs/components/handler/: conformance.md  reference.md
src/conjured/agent/docs/how-to/: compose-and-run.md
src/conjured/agent/docs/reference/: error-index.md  glossary.md  principles.md
src/conjured/agent/steering/: exhaustive-declaration-override.md  runtime-lookup-is-a-service.md  service-invoke-call-convention.md  state-across-runs.md  test-substitution-both-declarations.md  write-and-observe-bundle.md
src/conjured/client/: __init__.py
src/conjured/conformance/: __init__.py  module-conformance-audit.md  trainable-backend-audit.md
src/conjured/conformance/findings/: blob_reference_emitter.md  gbnf_trainable.md  openai_compatible_trainable.md
src/conjured/core/: __init__.py
src/conjured/events/: __init__.py
src/conjured/hasher/: __init__.py  hashes.py
src/conjured/ir/: __init__.py  base.py  channel_types.py  common.py  composition.py  deployment.py  graph.py  handler.py  merge.py  pipeline.py  service_type.py  substitute.py
src/conjured/lib/: __init__.py  blob_reference_emitter.audit.toml  blob_reference_emitter.py  blob_reference_emitter.toml  compilers.py  gbnf_trainable.audit.toml  gbnf_trainable.py  gbnf_trainable.toml  openai_compatible_trainable.audit.toml  openai_compatible_trainable.py  openai_compatible_trainable.toml
src/conjured/runner/: __init__.py  assemble.py  dispatch.py  executor.py  run.py
src/conjured/server/: __init__.py  __main__.py  app.py  hub.py  problem_details.py
src/conjured/testing/: __init__.py  errors.py  events.py  fakes.py  fixtures.py  handlers.py  load.py  plugin.py
src/conjured/validator/: __init__.py  ast_audit.py  audit_stamp.py  compile.py  constraints.py  model_gen.py  normalize.py  parse.py  registry.py  resolve.py  resolve_adapter.py  resolve_compile.py  resolve_handler.py  resolve_validator.py  tokens.py
tests/: test_contract_violation_group.py  test_engine_seals.py  test_entry_points_wiring.py  test_errors_registry.py  test_events.py  test_extras_contract.py  test_gen_error_index_transclude.py  test_manifest.py  test_wheel_ships_docs.py
tests/adapters/: test_gbnf.py  test_secret_refs.py  test_wire.py  test_wire_budget_fold.py
tests/capture/: test_capture_vertical.py
tests/client/: test_client.py
tests/conformance/: test_shipped_stamps.py
tests/derivables/: _fixtures.py  test_cli.py  test_extract.py
tests/hasher/: test_hashes.py
tests/ir/: test_merge_defs.py
tests/lib/: fakes.py  loopback.py  test_blob_reference_emitter.py  test_gbnf_trainable.py  test_openai_compatible_trainable.py
tests/runner/: test_assemble.py  test_bundle_embed.py  test_deadline_propagation.py  test_dispatch.py  test_nested_pipeline.py  test_pipeline_failure.py  test_run.py  test_streaming.py
tests/server/: conftest.py  test_app.py  test_hub.py  test_main.py  test_problem_details.py  test_sse.py  test_token_stream.py
tests/testing/: conftest.py  test_dispatch.py  test_events.py  test_fakes.py  test_fixtures.py  test_handlers.py  test_load.py  test_plugin.py
tests/validator/: fixtures.py  test_aggregation.py  test_audit_stamp.py  test_binding_model_completion.py  test_closed_shape_seals.py  test_compile_param_files.py  test_composite_nested_authoring.py  test_deadline_reserved_name.py  test_docs_examples.py  test_explicit_null.py  test_fail_loud_fixes.py  test_floor_fixes.py  test_fuzz.py  test_model_gen.py  test_negative.py  test_positive.py  test_resolve_adapter.py  test_resolve_bundle.py  test_resolve_compile.py  test_resolve_handler.py  test_resolve_validator.py  test_secret_ref_compile.py  test_table_token_extras.py
tools/: README.md  build_agent_surface.py  gen_error_index.py  requirements.txt
tools/docs_site/: __init__.py  build.py  conf.py  preprocess.py  rule_blocks.py
tools/tests/: test_build_agent_surface.py  test_gen_error_index.py
(+17 files in other folders)
